Lab1/Code/syntax.output
Terminals unused in grammar

   WHILE
   LOWER_THAN_ELSE


State 39 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC

   24 StmtList: Stmt StmtList
   25         | %empty

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt

   31 DefList: Def DefList
   32        | %empty

   33 Def: Specifier DecList SEMI
   34    | Specifier error SEMI
   35    | Specifier DecList error
   36    | Specifier Dec error

   37 DecList: Dec
   38        | Dec COMMA DecList

   39 Dec: VarDec
   40    | VarDec ASSIGNOP Exp

   41 Exp: Exp ASSIGNOP Exp
   42    | Exp AND Exp
   43    | Exp OR Exp
   44    | Exp RELOP Exp
   45    | Exp PLUS Exp
   46    | Exp MINUS Exp
   47    | Exp STAR Exp
   48    | Exp DIV Exp
   49    | LP Exp RP
   50    | MINUS Exp
   51    | NOT Exp
   52    | ID LP Args RP
   53    | ID LP RP
   54    | Exp LB Exp RB
   55    | Exp DOT ID
   56    | ID
   57    | INT
   58    | FLOAT
   59    | ID LP error RP
   60    | Exp LB error RB

   61 Args: Exp COMMA Args
   62     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 34 35 36 59 60
INT (258) 17 57
FLOAT (259) 58
ID (260) 13 15 16 18 19 52 53 55 56 59
SEMI (261) 4 5 26 28 33 34
COMMA (262) 8 20 38 61
ASSIGNOP (263) 40 41
RELOP (264) 44
PLUS (265) 45
MINUS (266) 46 50
STAR (267) 47
DIV (268) 48
AND (269) 42
OR (270) 43
NOT (271) 51
DOT (272) 55
TYPE (273) 9
LP (274) 18 19 29 30 49 52 53 59
RP (275) 18 19 29 30 49 52 53 59
LB (276) 17 54 60
RB (277) 17 54 60
LC (278) 11 23
RC (279) 11 23
STRUCT (280) 11 12
RETURN (281) 28
IF (282) 29 30
ELSE (283) 30
WHILE (284)
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6, on right: 2
ExtDecList (35)
    on left: 7 8, on right: 4 8
Specifier (36)
    on left: 9 10, on right: 4 5 6 22 33 34 35 36
StructSpecifier (37)
    on left: 11 12, on right: 10
OptTag (38)
    on left: 13 14, on right: 11
Tag (39)
    on left: 15, on right: 12
VarDec (40)
    on left: 16 17, on right: 7 8 17 22 39 40
FunDec (41)
    on left: 18 19, on right: 6
VarList (42)
    on left: 20 21, on right: 18 20
ParamDec (43)
    on left: 22, on right: 20 21
CompSt (44)
    on left: 23, on right: 6 27
StmtList (45)
    on left: 24 25, on right: 23 24
Stmt (46)
    on left: 26 27 28 29 30, on right: 24 29 30
DefList (47)
    on left: 31 32, on right: 11 23 31
Def (48)
    on left: 33 34 35 36, on right: 31
DecList (49)
    on left: 37 38, on right: 33 35 38
Dec (50)
    on left: 39 40, on right: 36 37 38
Exp (51)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60, on right: 26 28 29 30 40 41 42 43 44 45 46 47 48 49 50 51
    54 55 60 61 62
Args (52)
    on left: 61 62, on right: 52 61


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


State 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 32 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 26
    Def              go to state 27


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 28
    STRUCT  shift, and go to state 2

    Specifier        go to state 29
    StructSpecifier  go to state 7
    VarList          go to state 30
    ParamDec         go to state 31


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 32

    ExtDecList  go to state 33
    VarDec      go to state 16


State 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 34


State 23

   23 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 32 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 35
    Def              go to state 27


State 24

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 25

   33 Def: Specifier . DecList SEMI
   34    | Specifier . error SEMI
   35    | Specifier . DecList error
   36    | Specifier . Dec error

    error  shift, and go to state 36
    ID     shift, and go to state 32

    VarDec   go to state 37
    DecList  go to state 38
    Dec      go to state 39


State 26

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 40


State 27

   31 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 32 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 27


State 28

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 29

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 32

    VarDec  go to state 42


State 30

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 43


State 31

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 44

    $default  reduce using rule 21 (VarList)


State 32

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 33

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 34

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 45


State 35

   23 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    ID      shift, and go to state 48
    MINUS   shift, and go to state 49
    NOT     shift, and go to state 50
    LP      shift, and go to state 51
    LC      shift, and go to state 23
    RETURN  shift, and go to state 52
    IF      shift, and go to state 53

    $default  reduce using rule 25 (StmtList)

    CompSt    go to state 54
    StmtList  go to state 55
    Stmt      go to state 56
    Exp       go to state 57


State 36

   34 Def: Specifier error . SEMI

    SEMI  shift, and go to state 58


State 37

   17 VarDec: VarDec . LB INT RB
   39 Dec: VarDec .
   40    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 59
    LB        shift, and go to state 22

    $default  reduce using rule 39 (Dec)


State 38

   33 Def: Specifier DecList . SEMI
   35    | Specifier DecList . error

    error  shift, and go to state 60
    SEMI   shift, and go to state 61


State 39

   36 Def: Specifier Dec . error
   37 DecList: Dec .
   38        | Dec . COMMA DecList

    error  shift, and go to state 62
    COMMA  shift, and go to state 63

    error  [reduce using rule 37 (DecList)]
    SEMI   reduce using rule 37 (DecList)


State 40

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 41

   31 DefList: Def DefList .

    $default  reduce using rule 31 (DefList)


State 42

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


State 43

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 44

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 29
    StructSpecifier  go to state 7
    VarList          go to state 64
    ParamDec         go to state 31


State 45

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 46

   57 Exp: INT .

    $default  reduce using rule 57 (Exp)


State 47

   58 Exp: FLOAT .

    $default  reduce using rule 58 (Exp)


State 48

   52 Exp: ID . LP Args RP
   53    | ID . LP RP
   56    | ID .
   59    | ID . LP error RP

    LP  shift, and go to state 65

    $default  reduce using rule 56 (Exp)


State 49

   50 Exp: MINUS . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 66


State 50

   51 Exp: NOT . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 67


State 51

   49 Exp: LP . Exp RP

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 68


State 52

   28 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 69


State 53

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 70


State 54

   27 Stmt: CompSt .

    $default  reduce using rule 27 (Stmt)


State 55

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 71


State 56

   24 StmtList: Stmt . StmtList

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    ID      shift, and go to state 48
    MINUS   shift, and go to state 49
    NOT     shift, and go to state 50
    LP      shift, and go to state 51
    LC      shift, and go to state 23
    RETURN  shift, and go to state 52
    IF      shift, and go to state 53

    $default  reduce using rule 25 (StmtList)

    CompSt    go to state 54
    StmtList  go to state 72
    Stmt      go to state 56
    Exp       go to state 57


State 57

   26 Stmt: Exp . SEMI
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID
   60    | Exp . LB error RB

    SEMI      shift, and go to state 73
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83


State 58

   34 Def: Specifier error SEMI .

    $default  reduce using rule 34 (Def)


State 59

   40 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 84


State 60

   35 Def: Specifier DecList error .

    $default  reduce using rule 35 (Def)


State 61

   33 Def: Specifier DecList SEMI .

    $default  reduce using rule 33 (Def)


State 62

   36 Def: Specifier Dec error .

    $default  reduce using rule 36 (Def)


State 63

   38 DecList: Dec COMMA . DecList

    ID  shift, and go to state 32

    VarDec   go to state 37
    DecList  go to state 85
    Dec      go to state 86


State 64

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 65

   52 Exp: ID LP . Args RP
   53    | ID LP . RP
   59    | ID LP . error RP

    error  shift, and go to state 87
    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51
    RP     shift, and go to state 88

    Exp   go to state 89
    Args  go to state 90


State 66

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   50    | MINUS Exp .
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID
   60    | Exp . LB error RB

    STAR  shift, and go to state 78
    DIV   shift, and go to state 79
    DOT   shift, and go to state 82
    LB    shift, and go to state 83

    $default  reduce using rule 50 (Exp)


State 67

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   51    | NOT Exp .
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID
   60    | Exp . LB error RB

    DOT  shift, and go to state 82
    LB   shift, and go to state 83

    $default  reduce using rule 51 (Exp)


State 68

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | LP Exp . RP
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID
   60    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    RP        shift, and go to state 91
    LB        shift, and go to state 83


State 69

   28 Stmt: RETURN Exp . SEMI
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID
   60    | Exp . LB error RB

    SEMI      shift, and go to state 92
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83


State 70

   29 Stmt: IF LP . Exp RP Stmt
   30     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 93


State 71

   23 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 23 (CompSt)


State 72

   24 StmtList: Stmt StmtList .

    $default  reduce using rule 24 (StmtList)


State 73

   26 Stmt: Exp SEMI .

    $default  reduce using rule 26 (Stmt)


State 74

   41 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 94


State 75

   44 Exp: Exp RELOP . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 95


State 76

   45 Exp: Exp PLUS . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 96


State 77

   46 Exp: Exp MINUS . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 97


State 78

   47 Exp: Exp STAR . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 98


State 79

   48 Exp: Exp DIV . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 99


State 80

   42 Exp: Exp AND . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 100


State 81

   43 Exp: Exp OR . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 101


State 82

   55 Exp: Exp DOT . ID

    ID  shift, and go to state 102


State 83

   54 Exp: Exp LB . Exp RB
   60    | Exp LB . error RB

    error  shift, and go to state 103
    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  go to state 104


State 84

   40 Dec: VarDec ASSIGNOP Exp .
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID
   60    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83

    $default  reduce using rule 40 (Dec)


State 85

   38 DecList: Dec COMMA DecList .

    $default  reduce using rule 38 (DecList)


State 86

   37 DecList: Dec .
   38        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 37 (DecList)


State 87

   59 Exp: ID LP error . RP

    RP  shift, and go to state 105


State 88

   53 Exp: ID LP RP .

    $default  reduce using rule 53 (Exp)


State 89

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID
   60    | Exp . LB error RB
   61 Args: Exp . COMMA Args
   62     | Exp .

    COMMA     shift, and go to state 106
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83

    $default  reduce using rule 62 (Args)


State 90

   52 Exp: ID LP Args . RP

    RP  shift, and go to state 107


State 91

   49 Exp: LP Exp RP .

    $default  reduce using rule 49 (Exp)


State 92

   28 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 28 (Stmt)


State 93

   29 Stmt: IF LP Exp . RP Stmt
   30     | IF LP Exp . RP Stmt ELSE Stmt
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID
   60    | Exp . LB error RB
